--- a/packages/blog-server/package.json
+++ b/packages/blog-server/package.json
@@ -10,7 +10,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "typecheck": "tsc --noEmit",
-    "create-admin": "tsx scripts/create-admin.ts"
+    "create-admin": "tsx scripts/create-admin.ts",
+    "db:init": "tsx scripts/init-database.ts"
   },
   "dependencies": {
     "express": "^4.21.1",
