--- a/packages/blog-server/.env.production.example
+++ b/packages/blog-server/.env.production.example
@@ -13,8 +13,8 @@ JWT_SECRET=<请使用上述命令生成>
 JWT_EXPIRES_IN=7d
 
 # CORS 配置（部署前端后填入实际 URL）
-FRONTEND_URL=https://your-blog.vercel.app
-ADMIN_URL=https://your-admin.vercel.app
+FRONTEND_URL=https://blog-fronted-gamma.vercel.app
+ADMIN_URL=https://blog-admin-five-xi.vercel.app
 
 # 文件上传配置
 MAX_FILE_SIZE=5242880
